# FaceRecognizer-3

./: CMakeLists.txt  README
cmake/: FindPoco.cmake  PocoConfig.cmake
config/: main.ini
documentation/: bericht.tcp  bericht.tex  bericht.tps  deckblatt.tex  einleitung.tex  fazit.tex  hauptteil.tex  inhaltsverzeichnis.tex  literatur.bib  literatur.tex  verzeichnisse.tex
documentation/convert_scripts/: README.txt  compareDate.vbs  visioToPDF.bat
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  EigenFaces.cpp  FaceDetector.cpp  FaceDetector.hpp  FaceRecognizer.cpp  FaceRecognizer.hpp  FaceWrapper.cpp  FaceWrapper.hpp  GPIOTrigger.cpp  GPIOTrigger.hpp  ICaptureDevice.hpp  ITrigger.hpp  KeyboardTrigger.cpp  KeyboardTrigger.hpp  MailService.cpp  MailService.hpp  main.cpp
test/: images.csv
