CMAKE_MINIMUM_REQUIRED (VERSION 3.2)

PROJECT (FaceRecognizer CXX C)

FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)

SET (CMAKE_CXX_FLAGS "-g -Wall -Wextra -Weffc++ -std=c++11")
SET (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -Wall -Wextra -Weffc++ -std=c++11 -DDEBUG")
SET (CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -g -Wall -Wextra -Weffc++ -std=c++11")

SET (EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/bin")

# setup project name and type

MESSAGE (STATUS "EXECUTABLE_OUTPUT_PATH:   " ${EXECUTABLE_OUTPUT_PATH})
MESSAGE (STATUS "CMAKE_SOURCE_DIR:         " ${CMAKE_SOURCE_DIR})
MESSAGE (STATUS "CMAKE_BINARY_DIR:         " ${CMAKE_BINARY_DIR})
MESSAGE (STATUS "PROJECT_SOURCE_DIR:       " ${PROJECT_SOURCE_DIR})
MESSAGE (STATUS "PROJECT_BINARY_DIR:       " ${PROJECT_BINARY_DIR})
MESSAGE (STATUS "CMAKE_SYSTEM:             " ${CMAKE_SYSTEM})

ADD_SUBDIRECTORY (src)
