INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${Poco_INCLUDE_DIRS})

LINK_DIRECTORIES(${Poco_LIBRARY_DIR})

set(SOURCE
   ${CMAKE_CURRENT_SOURCE_DIR}/FaceWrapper.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/FaceDetector.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/FaceRecognizer.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/Camera.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/GPIOTrigger.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/MailService.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
)

find_library(POCO_FOUNDATION PocoFoundation)
find_library(POCO_NET PocoNet)

ADD_EXECUTABLE(facereg ${SOURCE})
TARGET_LINK_LIBRARIES(facereg ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(facereg ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(facereg ${POCO_FOUNDATION} ${POCO_NET})
TARGET_LINK_LIBRARIES(facereg ${CMAKE_THREAD_LIBS_INIT})
